--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "needTracker",
   "main": "server.js",
   "dependencies": {
-    "express" : "~4.5.1",
-	"mongoose" : "~3.8.0",
-	"body-parser" : "~1.4.2",
-	"method-override" : "~2.0.2"
+    "express" : "4.12.3",
+	"mongoose" : "4.0.3",
+	"body-parser" : "1.12.4",
+	"method-override" : "~2.0.2",
+    "http-status": "0.1.8",
+    "wagner-core": "0.1.0",
+    "mongoose-deep-populate": "3.0.0"
   }
 }
 
