--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "angular": "latest",
     "angular-route": "latest",
     "file-saver": "^1.3.3",
-    "blob": "*"
+    "blob": "*",
+    "angular-google-chart": "0.1.0"
   }
 }
